...
    <string name="action_log_in">Log in</string>
    <string name="action_register">Register</string>
    <string name="club">Club</string>
    <string name="student">Student</string>

    <!-- Error Messages to login -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_email_not_verified">Email not verified, new verification email sent</string>
    <string name="error_no_email_domain_match">This email address is invalid for this school
    </string>
    <string name="error_wrong_password">This password is incorrect</string>
    <string name="error_password_short">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_email_exists">This email already exists</string>
    <string name="error_email_not_exists">This email does not exist</string>
    <string name="error_log_in_failed">Log in failed</string>
    <string name="error_register_failed">Registration Failed</string>

    <string name="title_activity_login">Log in</string>
    <string name="title_activity_register">Register</string>
...

    <string name="home_page">HomePage</string>
    <string name="club_description">Club Description</string>
    <string name="social_media">Social Media Links</string>
    <string name="contact_info">Contact Information</string>
    <string name="description">Description</string>
    <string name="edit_button">Edit</string>
    <string name="club_profile_page">Club Profile Page</string>
    <string name="links">links</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>

    <!-- Strings related to Timeline popup_menu.xml -->
...
