...
        android:layout_height="wrap_content"
        android:layout_below="@id/display_club_name"
        android:layout_marginStart="5dp"
        android:text="@string/club_description"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/display_club_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_description"
        android:layout_marginStart="5dp"
        android:enabled="false"
        android:textColor="@android:color/black"
...
